--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "breakpoint-sass": "^2.7.1",
     "chroma-sass": "^1.2.6",
     "gatsby": "^2.0.0",
+    "gatsby-plugin-create-client-paths": "^2.0.0",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
