add apollo and make a call

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "apollo-boost": "^0.1.16",
     "breakpoint-sass": "^2.7.1",
     "chroma-sass": "^1.2.6",
     "gatsby": "^2.0.0",
@@ -15,9 +16,11 @@
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-source-graphql": "^2.0.2",
     "gatsby-transformer-json": "^2.1.1",
+    "graphql-tag": "^2.9.2",
     "node-sass": "^4.9.3",
     "path": "^0.12.7",
     "react": "^16.5.1",
+    "react-apollo": "^2.1.11",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
