--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-boost": "^0.1.16",
     "breakpoint-sass": "^2.7.1",
     "chroma-sass": "^1.2.6",
+    "es6-promise": "^4.2.5",
     "gatsby": "^2.0.0",
     "gatsby-plugin-create-client-paths": "^2.0.0",
     "gatsby-plugin-manifest": "^2.0.2",
@@ -17,6 +18,8 @@
     "gatsby-source-graphql": "^2.0.2",
     "gatsby-transformer-json": "^2.1.1",
     "graphql-tag": "^2.9.2",
+    "isomorphic-fetch": "^2.2.1",
+    "node-fetch": "2.1.0",
     "node-sass": "^4.9.3",
     "path": "^0.12.7",
     "react": "^16.5.1",
