--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-transformer-json": "^2.1.1",
     "graphql-tag": "^2.9.2",
     "isomorphic-fetch": "^2.2.1",
+    "leaflet": "^1.3.4",
     "node-fetch": "2.1.0",
     "node-sass": "^4.9.3",
     "path": "^0.12.7",
@@ -26,6 +27,7 @@
     "react-apollo": "^2.1.11",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-leaflet": "^2.0.1",
     "react-redux": "^5.0.7",
     "redux-thunk": "^2.3.0",
     "support-for": "^1.0.7",
