--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-leaflet": "^2.0.1",
+    "react-markdown": "^4.0.3",
     "react-redux": "^5.0.7",
     "react-select": "^2.1.0",
     "redux-thunk": "^2.3.0",
