--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-helmet": "^5.2.0",
     "react-leaflet": "^2.0.1",
     "react-redux": "^5.0.7",
+    "react-responsive": "^5.0.0",
     "react-select": "^2.1.0",
     "redux-thunk": "^2.3.0",
     "support-for": "^1.0.7",
