--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.5.1",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.5.1",
+    "react-feather": "^1.1.4",
     "react-helmet": "^5.2.0",
     "react-leaflet": "^2.0.1",
     "react-redux": "^5.0.7",
