--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "chroma-sass": "^1.2.6",
     "es6-promise": "^4.2.5",
     "gatsby": "^2.0.0",
+    "gatsby-image": "^2.0.18",
     "gatsby-plugin-create-client-paths": "^2.0.0",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.1",
+    "gatsby-plugin-sharp": "^2.0.10",
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-source-graphql": "^2.0.2",
     "gatsby-transformer-json": "^2.1.1",
+    "gatsby-transformer-sharp": "^2.1.6",
     "graphql-tag": "^2.9.2",
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.3.4",
