--- a/package.json
+++ b/package.json
@@ -4,36 +4,36 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "apollo-boost": "^0.1.16",
+    "apollo-boost": "^0.1.18",
     "breakpoint-sass": "^2.7.1",
     "chroma-sass": "^1.2.6",
     "es6-promise": "^4.2.5",
-    "gatsby": "^2.0.0",
+    "gatsby": "^2.0.34",
     "gatsby-image": "^2.0.18",
-    "gatsby-plugin-create-client-paths": "^2.0.0",
-    "gatsby-plugin-manifest": "^2.0.2",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sass": "^2.0.1",
+    "gatsby-plugin-create-client-paths": "^2.0.2",
+    "gatsby-plugin-manifest": "^2.0.7",
+    "gatsby-plugin-offline": "^2.0.10",
+    "gatsby-plugin-react-helmet": "^3.0.1",
+    "gatsby-plugin-sass": "^2.0.2",
     "gatsby-plugin-sharp": "^2.0.10",
-    "gatsby-source-filesystem": "^2.0.1",
-    "gatsby-source-graphql": "^2.0.2",
-    "gatsby-transformer-json": "^2.1.1",
+    "gatsby-source-filesystem": "^2.0.6",
+    "gatsby-source-graphql": "^2.0.5",
+    "gatsby-transformer-json": "^2.1.5",
     "gatsby-transformer-sharp": "^2.1.6",
-    "graphql-tag": "^2.9.2",
+    "graphql-tag": "^2.10.0",
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.3.4",
-    "node-fetch": "2.1.0",
-    "node-sass": "^4.9.3",
+    "node-fetch": "^2.2.0",
+    "node-sass": "^4.9.4",
     "path": "^0.12.7",
-    "react": "^16.5.1",
-    "react-apollo": "^2.1.11",
-    "react-dom": "^16.5.1",
+    "react": "^16.6.0",
+    "react-apollo": "^2.2.4",
+    "react-dom": "^16.6.0",
     "react-feather": "^1.1.4",
     "react-helmet": "^5.2.0",
-    "react-leaflet": "^2.0.1",
-    "react-redux": "^5.0.7",
-    "react-select": "^2.1.0",
+    "react-leaflet": "^2.1.1",
+    "react-redux": "^5.1.0",
+    "react-select": "^2.1.1",
     "redux-thunk": "^2.3.0",
     "support-for": "^1.0.7",
     "typey": "^1.1.2"
@@ -49,7 +49,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.3"
   },
   "repository": {
     "type": "git",
