--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "acorn": "^6.0.2",
     "apollo-boost": "^0.1.18",
     "breakpoint-sass": "^2.7.1",
     "chroma-sass": "^1.2.6",
