--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-helmet": "^5.2.0",
     "react-leaflet": "^2.1.1",
     "react-redux": "^5.1.0",
+    "react-responsive": "^6.0.0",
     "react-select": "^2.1.1",
     "redux-thunk": "^2.3.0",
     "support-for": "^1.0.7",
