--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
+    "gatsby-plugin-eslint": "^2.0.1",
     "husky": "^1.1.2",
     "lint-staged": "^8.0.4",
     "prettier": "^1.14.3"
