--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "gatsby-plugin-offline": "^2.0.10",
     "gatsby-plugin-react-helmet": "^3.0.1",
     "gatsby-plugin-sass": "^2.0.2",
-    "gatsby-plugin-sharp": "^2.0.11",
+    "gatsby-plugin-sharp": "^2.0.15",
     "gatsby-source-filesystem": "^2.0.6",
     "gatsby-source-graphql": "^2.0.5",
     "gatsby-transformer-json": "^2.1.5",
@@ -33,6 +33,7 @@
     "react-feather": "^1.1.4",
     "react-helmet": "^5.2.0",
     "react-leaflet": "^2.1.1",
+    "react-markdown": "^4.0.4",
     "react-redux": "^5.1.0",
     "react-responsive": "^6.0.0",
     "redux-thunk": "^2.3.0",
