--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "eslint --fix ./src/**/**/*.js",
+    "serve": "gatsby serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
