--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,6 @@
     X-XSS-Protection = "1; mode=block"
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
     X-Content-Type-Options = "nosniff"
+[[redirects]]
+  from = "/api/*"
+  to = "https://api.ossn.club/api/:splat"
