--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "acorn": "^6.0.5",
     "apollo-boost": "^0.1.27",
+    "apollo-link-context": "^1.0.12",
     "breakpoint-sass": "^2.7.1",
     "chroma-sass": "^1.2.6",
     "es6-promise": "^4.2.5",
@@ -30,6 +31,7 @@
     "react-apollo": "^2.4.0",
     "react-dom": "^16.7.0",
     "react-feather": "^1.1.5",
+    "query-string": "^6.2.0",
     "react-helmet": "^5.2.0",
     "react-leaflet": "^2.2.0",
     "react-markdown": "^4.0.6",
@@ -56,7 +58,7 @@
     "eslint": "^5.12.1",
     "eslint-config-prettier": "^3.6.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
