chore: Add local command

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "local": "sudo gatsby develop -p 80",
     "format": "eslint --fix ./src/**/**/*.js",
     "serve": "gatsby serve",
     "test": "echo \"Error: no test specified\" && exit 1"
