--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "version": "1.0.0",
   "dependencies": {
     "acorn": "^6.1.0",
-    "apollo-boost": "^0.1.27",
+    "apollo-boost": "^0.1.28",
     "apollo-link-context": "^1.0.14",
     "breakpoint-sass": "^2.7.1",
     "chroma-sass": "^1.2.6",
-    "es6-promise": "^4.2.5",
-    "gatsby": "^2.1.4",
+    "es6-promise": "^4.2.6",
+    "gatsby": "^2.1.11",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-create-client-paths": "^2.0.4",
-    "gatsby-plugin-manifest": "^2.0.17",
-    "gatsby-plugin-offline": "^2.0.23",
+    "gatsby-plugin-manifest": "^2.0.18",
+    "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "^2.0.20",
-    "gatsby-source-filesystem": "^2.0.20",
+    "gatsby-plugin-sharp": "^2.0.21",
+    "gatsby-source-filesystem": "^2.0.21",
     "gatsby-source-graphql": "^2.0.10",
     "gatsby-transformer-json": "^2.1.8",
-    "gatsby-transformer-sharp": "^2.1.13",
+    "gatsby-transformer-sharp": "^2.1.14",
     "graphql-tag": "^2.10.1",
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.4.0",
@@ -28,14 +28,14 @@
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
     "query-string": "^6.2.0",
-    "react": "^16.8.1",
+    "react": "^16.8.2",
     "react-apollo": "^2.4.1",
-    "react-dom": "^16.8.1",
+    "react-dom": "^16.8.2",
     "react-feather": "^1.1.6",
     "react-helmet": "^5.2.0",
-    "react-leaflet": "^2.2.0",
+    "react-leaflet": "^2.2.1",
     "react-markdown": "^4.0.6",
-    "react-redux": "^6.0.0",
+    "react-redux": "^6.0.1",
     "react-responsive": "^6.1.1",
     "redux-thunk": "^2.3.0",
     "support-for": "^1.0.7",
@@ -56,7 +56,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.13.0",
+    "eslint": "^5.14.1",
     "eslint-config-prettier": "^4.0.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
@@ -68,7 +68,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "gatsby-plugin-eslint": "^2.0.4",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.3",
+    "lint-staged": "^8.1.4",
     "prettier": "^1.16.4"
   },
   "repository": {
@@ -83,6 +83,10 @@
   "lint-staged": {
     "*.js": [
       "eslint --fix",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
       "git add"
     ]
   }
