--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql-tag": "^2.10.1",
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.4.0",
+    "lodash": "^4.17.11",
     "node-fetch": "^2.3.0",
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
