--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-transformer-json": "^2.1.8",
     "gatsby-transformer-sharp": "^2.1.13",
     "graphql-tag": "^2.10.1",
+    "immer": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.4.0",
     "lodash": "^4.17.11",
