--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "breakpoint-sass": "^2.7.1",
     "chroma-sass": "^1.2.6",
     "es6-promise": "^4.2.6",
+    "eslint-plugin-react-hooks": "^1.2.0",
     "gatsby": "^2.1.11",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-create-client-paths": "^2.0.4",
