chore: Fix travis scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ addons:
   chrome: stable
 sudo: false
 
-scripts:
-  - "npm run test"
+after_script:
   - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then npm run lh -- https://deploy-preview-"$TRAVIS_PULL_REQUEST"--zen-euclid-6d318e.netlify.com; fi'
   - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then npm run lh -- https://ossn.club; fi'
