chore: Fix travis after_script

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ sudo: false
 
 after_script:
   - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then npm run lh -- https://deploy-preview-"$TRAVIS_PULL_REQUEST"--zen-euclid-6d318e.netlify.com; fi'
-  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then npm run lh -- https://ossn.club; fi'
+  - 'if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then npm run lh -- https://ossn.club; fi'
