--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
     "gatsby-plugin-eslint": "^2.0.4",
+    "gatsby-plugin-extract-schema": "0.0.5",
     "husky": "^1.3.1",
     "lighthousebot": "git+https://github.com/GoogleChromeLabs/lighthousebot.git",
     "lint-staged": "^8.1.4",
