--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ addons:
 sudo: false
 
 after_script:
-  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then npm run lh -- https://deploy-preview-"$TRAVIS_PULL_REQUEST"--zen-euclid-6d318e.netlify.com; fi'
-  - 'if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then npm run lh -- https://ossn.club; fi'
+  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then npm run lh -- --perf=96 --pwa=100 --a11y 88 --bp 85 https://deploy-preview-"$TRAVIS_PULL_REQUEST"--zen-euclid-6d318e.netlify.com; fi'
+  - 'if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then npm run lh -- --perf=96 --pwa=100 --a11y 88 --bp 85 https://ossn.club; fi'
