--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby": "^2.1.11",
     "gatsby-image": "^2.0.30",
     "gatsby-plugin-create-client-paths": "^2.0.4",
+    "gatsby-plugin-google-analytics": "^2.0.14",
     "gatsby-plugin-manifest": "^2.0.18",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.7",
