--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "acorn": "^6.1.0",
     "apollo-boost": "^0.1.28",
     "apollo-link-context": "^1.0.14",
+    "apollo-link-error": "^1.1.7",
     "breakpoint-sass": "^2.7.1",
     "chroma-sass": "^1.2.6",
     "es6-promise": "^4.2.6",
