Work on Content-Security-Policy

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,7 @@
     X-XSS-Protection = "1; mode=block"
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
     X-Content-Type-Options = "nosniff"
-    Content-Security-Policy = "script-src 'self' www.google-analytics.com https:"
+    Content-Security-Policy = "script-src 'self' www.google-analytics.com dev-api.ossn.club backend.ossn.club https:"
 [[redirects]]
   from = "https://dev.ossn.club/api/*"
   to = "https://dev-api.ossn.club/api/:splat"
